# agentic-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deployment/: Dockerfile  docker-compose.yml
docs/: architecture.md
scripts/: ingest_docs.py  run_eval.py  run_evaluation.py
src/: config.py
src/agents/: graph.py  nodes.py  tools.py
src/api/: main.py
src/cache/: redis_client.py
src/evaluation/: grader.py  metrics.py
src/retrieval/: bm25.py  hybrid.py  vector_store.py
tests/: eval_dataset.json  test_adversarial.py  test_agents.py  test_retrieval.py
